# anonymize

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
anonymize/: __init__.py  __main__.py  config.py  main.py  reader.py  transformations.py
anonymize/models/: __init__.py  config.py  outputs.py  rules.py  sources.py  transforms.py
tests/: conftest.py  test_config.py  test_rules.py  test_sources.py  test_transformations.py
tests/models/: test_outputs.py  test_rules.py  test_sources.py
